--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,9 +6,12 @@ on:
   pull_request:
     branches: [ "main" ]
     
+  
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    env:
+      SHA6: ${GITHUB_SHA::6}
     steps:
     - uses: actions/checkout@v2
     - uses: kciter/aws-ecr-action@v3
@@ -18,7 +21,7 @@ jobs:
         account_id: ${{ secrets.AWS_ACCOUNT_ID }}
         repo: wordpress
         region: us-west-1
-        tags: latest,${{ github.sha }}
+        tags: $SHA6
         create_repo: true
         image_scanning_configuration: true
         set_repo_policy: true
