--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         account_id: ${{ secrets.AWS_ACCOUNT_ID }}
         repo: wordpress
         region: us-west-1
-        tags: $SHA6
+        tags: ${{SHA6}}
         create_repo: true
         image_scanning_configuration: true
         set_repo_policy: true
